<resources>
    <string name="app_name">PGUIT-CDMX</string>
    <string name="infraccion_cometida">Infracción Cometida</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="bienvenido">!Bienvenido¡</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="generar_infracci_n">Generar Infracción</string>
    <string name="generar_orden_de_arrastre">Generar Orden de Arrastre</string>
    <string name="ver_infracciones_registradas">Ver Infracciones Registradas</string>
    <string name="hola_agente">!Hola¡ Agente:</string>
    <string name="firma">Firma:</string>
    <string name="borrar_firma">Borrar:</string>
    <string name="placas_del_vehiculo">Placas del vehiculo</string>
    <string name="ubicacion_del_incidente">Ubicacion del incidente</string>
    <string name="todo">TODO</string>
    <string name="direccion">Direccion</string>
    <string name="fecha_del_la_infracci_n">Fecha del la Infracción</string>
    <string name="nuevainfracci">Nueva Infracción</string>
    <string name="sig">Siguiente</string>
    <string name="firma_del_oficial">Firma del Oficial</string>
    <string name="finalizar_y_guardar">FINALIZAR Y GUARDAR</string>
    <string name="evidencia_fotogr_fica">Evidencia Fotográfica</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="camara">Cámara</string>
    <string name="lista_de_fotos_capturadas">Lista de fotos capturadas</string>
    <string name="guardar_orden">Guardar Orden</string>
    <string name="cancelar">Cancelar</string>
    <string name="estado_f_sico_e_inventario">Estado físico e Inventario</string>
    <string name="datos_del_corral_n">Datos del corralón</string>
    <string name="marca_modelo">Marca / Modelo</string>
    <string name="fecha_y_hora_de_ingreso">Fecha y hora de ingreso</string>
    <string name="placa">Placa</string>
    <string name="folio_de_infracci_n">Folio de infracción</string>
    <string name="color">Color</string>
    <string name="datos_de_la_infracci_n">Datos de la infracción</string>
    <string name="datos_del_veh_culo">Datos del vehículo</string>
    <string name="orden_de_arrastre">Orden de Arrastre</string>
    <string name="registro_de_ingreso_a_corral_n">Registro de Ingreso a Corralón</string>
    <string name="finalizar_registro">Finalizar Registro</string>
    <string name="panel_de_control_corral_n">Panel de Control - Corralón</string>
    <string name="panel_de_control_operador_de_gr_a">Panel de Control - Operador de Grúa</string>
    <string name="veh_culo_a_recoger">VEHÍCULO A RECOGER</string>
    <string name="arrastre_en_curso">Arrastre en Curso</string>
    <string name="ubicaci_n_de_recogida">Ubicación de Recogida</string>
    <string name="direcci_n_exacta">Dirección exacta</string>
    <string name="regresar">Regresar</string>
    <string name="detalles_de_la_solicitud_de_arrastre">Detalles de la Solicitud de Arrastre</string>
    <string name="panel_de_control_agente">Panel de Control - Oficial de Transito:</string>
    <string name="qu_acci_n_desea_realizar_hoy">¿Qué acción desea realizar hoy?</string>
    <string name="infracciones_registradas">Infracciones Registradas</string>
    <string name="registro_hist_rico_de_multas_aplicadas">Registro histórico de multas aplicadas</string>
    <string name="sin_infracciones_registradas">Sin infracciones registradas</string>
    <string name="las_multas_que_levantes_aparecer_n_aqu">Las multas que levantes aparecerán aquí</string>
    <string name="inventario_en_dep_sito">Inventario en Depósito</string>
    <string name="historial_de_movimientos">Historial de Movimientos</string>
    <string name="registro_de_ingresos_y_liberaciones">Registro de ingresos y liberaciones</string>
    <string name="sin_movimientos_registrados">Sin movimientos registrados</string>
    <string name="los_registros_de_entrada_y_salida_aparecer_n_aqu">Los registros de entrada y salida aparecerán aquí</string>
    <string name="personal_de_parquimetros">Personal de Parquimetros</string>
    <string name="verificaci_n_y_reporte_de_incidencias">Verificación y Reporte de Incidencias</string>
    <string name="verificar_estatus">Verificar Estatus</string>
    <string name="solicitar_gr_a">Solicitar Grúa</string>
    <string name="pagado_activo">PAGADO / ACTIVO</string>
    <string name="ingrese_la_placa_ej_abc_123">Ingrese la placa (Ej: ABC-123)</string>
    <string name="vence_a_las_18_30_hrs">Vence a las: 18:30 hrs</string>
    <string name="estado_del_tiempo">ESTADO DEL TIEMPO:</string>
    <string name="tiempo_restante_45_min">Tiempo restante: 45 min</string>
    <string name="consulta_de_placa">Consulta de Placa</string>
    <string name="solicitar_ayuda_a_policia_de_transito">Solicitar Ayuda a Policia de Transito</string>
    <string name="mi_cuenta_configuraci_n">Mi Cuenta / Configuración</string>
    <string name="panel_de_control_supervisor">Panel de Control - Supervisor</string>
    <string name="ver_infracciones_recientes">Ver infracciones recientes</string>
    <string name="validar_infracciones">Validar Infracciones</string>
    <string name="levantar_infracci_n">Levantar Infracción</string>
    <string name="_1_datos_del_veh_culo">1. Datos del Vehículo</string>
    <string name="ingresar_placa">Ingresar placa</string>
    <string name="consultar_placa">Consultar Placa</string>
    <string name="tipo">Tipo:</string>
    <string name="marca">Marca:</string>
    <string name="modelo">Modelo:</string>
    <string name="_2_datos_del_conductor">2. Datos del Conductor</string>
    <string name="n_mero_de_licencia">Número de Licencia:</string>
    <string name="ej_l12345678">Ej. L12345678</string>
    <string name="validar_conductor">Validar Conductor</string>
    <string name="estado_pendiente_de_validaci_n">Estado: Pendiente de validación</string>
    <string name="nombre_del_conductor">Nombre del Conductor:</string>
    <string name="_3_cat_logo_de_infracci_n">3. Catálogo de Infracción</string>
    <string name="art_culo_aplicable">Artículo aplicable: --</string>
    <string name="_4_fecha_de_la_infracci_n">4. Fecha de la Infracción</string>
    <string name="_5_geolocalizaci_n">5. Geolocalización</string>
    <string name="direcci_n_del_incidente">Dirección del incidente</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="firma_de_infractor">Firma de Infractor</string>
</resources>