<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="256dp"
        android:text="@string/hola_agente"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGenerarInfraccion"
        android:layout_width="275dp"
        android:layout_height="71dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="72dp"
        android:text="@string/generar_infracci_n"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGenerarArrastre"
        android:layout_width="280dp"
        android:layout_height="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="72dp"
        android:text="@string/generar_orden_de_arrastre"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGenerarInfraccion" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnInfraccionRegistrada"
        android:layout_width="275dp"
        android:layout_height="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="72dp"
        android:text="@string/ver_infracciones_registradas"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGenerarArrastre" />
</androidx.constraintlayout.widget.ConstraintLayout>