<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvSaludoAgente"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/panel_de_control_supervisor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubtituloAgente"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/qu_acci_n_desea_realizar_hoy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSaludoAgente" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtituloAgente">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVerInfracciones"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginBottom="20dp"
            android:text="@string/ver_infracciones_recientes"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="40dp"
            app:icon="@android:drawable/ic_menu_edit"
            app:iconGravity="textStart"
            app:iconPadding="15dp"
            app:iconSize="28dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnValidarInfraccion"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginBottom="20dp"
            android:text="@string/validar_infracciones"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="40dp"
            app:icon="@android:drawable/ic_menu_directions"
            app:iconGravity="textStart"
            app:iconPadding="15dp"
            app:iconSize="28dp" />



    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfiguracion"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/mi_cuenta_configuraci_n"
        android:textColor="#424242"
        app:icon="@android:drawable/ic_menu_manage"
        app:iconTint="#424242"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>